# auto-portforward

./: .aider.chat.history.md  .gitignore  .pre-commit-config.yaml  README.md  datatype.py  pyproject.toml  remote_monitor.py  remote_process_monitor.py  run.py  script_on_remote_machine.py  tui.py
auto_portforward/: __init__.py  _version.py  cli.py  datatype.py  remote_process_monitor.py  script_on_remote_machine.py  ssh_port_forward.py  tui.py  utils.py
auto_portforward/process_provider/: abstract_provider.py  get_process_with_openports.py  local.py  remote_process_monitor.py  script_on_remote_machine.py  ssh_remote.py
