[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "soraxas"}]
description = "Monitor for local or remote opened ports"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "auto-portforward"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "textual==3.2.0"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
]

[project.scripts]
auto-portforward = "auto_portforward.cli:main"

[tool.coverage.run]
omit = [
  "./auto_portforward/_version.py",
  "./auto_portforward/__init__.py",
  "./tests/*"
]

[tool.mypy]
plugins = []

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./auto_portforward/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
auto_portforward = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "auto_portforward/_version.py"

[tool.pytype]
inputs = ['auto_portforward']
